Refactored code Create MongoCDCManager as the main object to create for the library Added simple test

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
             <version>2.7</version>
         </dependency>
 
+        <!--   TEST    -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
