--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run checks
-      run: mvn verify
+      run: mvn verify --settings settings.xml
     - name: Archive jars
       uses: actions/upload-artifact@v3
       with:
