--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,10 +27,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        server-id: ossrh
+        server-username: sonatype.username
+        server-password: sonatype.password
+        gpg-passphrase: sonatype.gpg.passphrase
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run checks
-      run: mvn verify --settings settings.xml
+      run: mvn verify -DskipTests
     - name: Archive jars
       uses: actions/upload-artifact@v3
       with:
