--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,3 +66,6 @@ jobs:
         sonatype.username: ${{ secrets.OSSRH_USERNAME }}
         sonatype.password: ${{ secrets.OSSRH_TOKEN }}
         sonatype.gpg.passphrase: ${{ secrets.SIGNING_PASSWORD }}
+        sonatype.gpg.signing-key-id: ${{ secrets.SIGNING_KEY_ID }}
+        sonatype.gpg.signing-key.: ${{ secrets.SIGNING_KEY }}
+
