--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,14 +27,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        server-id: ossrh
-        server-username: sonatype.username
-        server-password: sonatype.password
-        gpg-passphrase: sonatype.gpg.passphrase
+        gpg-private-key: ${{ secrets.SIGNING_KEY }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run checks
-      run: mvn verify -DskipTests
+      run: mvn verify --settings $GITHUB_WORKSPACE/settings.xml -DskipTests
     - name: Archive jars
       uses: actions/upload-artifact@v3
       with:
