--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,7 @@ jobs:
     - name: Run checks
       env:
         GPG_KEY: ${{ secrets.SIGNING_KEY }}
+        GPG_KEY_NAME: ${{ secrets.SIGNING_KEY_ID }}
         GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
       run: mvn verify --settings $GITHUB_WORKSPACE/settings.xml -DskipTests
     - name: Archive jars
