--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,19 +23,25 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
+      env:
+        OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+        GPG_KEY: ${{ secrets.SIGNING_KEY }}
+        GPG_KEY_NAME: ${{ secrets.SIGNING_KEY_ID }}
+        GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        overwrite-settings: false
+        server-id: ossrh
+        server-username: OSSRH_USERNAME
+        server-password: OSSRH_TOKEN
+        gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+        gpg-passphrase: GPG_PASSPHRASE
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run checks
-      env:
-        GPG_KEY: ${{ secrets.SIGNING_KEY }}
-        GPG_KEY_NAME: ${{ secrets.SIGNING_KEY_ID }}
-        GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
-      run: mvn verify --settings $GITHUB_WORKSPACE/settings.xml -DskipTests
+      run: mvn verify -DskipTests
     - name: Archive jars
       uses: actions/upload-artifact@v3
       with:
