--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,13 +33,19 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        server-id: ossrh
-        server-username: OSSRH_USERNAME
-        server-password: OSSRH_TOKEN
-        gpg-private-key: ${{ secrets.SIGNING_KEY }}
-        gpg-passphrase: GPG_PASSPHRASE
+#        server-id: ossrh
+#        server-username: OSSRH_USERNAME
+#        server-password: OSSRH_TOKEN
+#        gpg-private-key: ${{ secrets.SIGNING_KEY }}
+#        gpg-passphrase: GPG_PASSPHRASE
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      env:
+#        OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+#        OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+        GPG_KEY: ${{ secrets.SIGNING_KEY }}
+        GPG_KEY_NAME: ${{ secrets.SIGNING_KEY_ID }}
+        GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
+      run: mvn -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
     - name: Run checks
       run: mvn verify -DskipTests
     - name: Archive jars
