--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,15 +39,15 @@ jobs:
 #        gpg-private-key: ${{ secrets.SIGNING_KEY }}
 #        gpg-passphrase: GPG_PASSPHRASE
     - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: Run checks
       env:
-#        OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-#        OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+        #        OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        #        OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
         GPG_KEY: ${{ secrets.SIGNING_KEY }}
         GPG_KEY_NAME: ${{ secrets.SIGNING_KEY_ID }}
         GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
-      run: mvn -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
-    - name: Run checks
-      run: mvn verify -DskipTests
+      run: mvn verify -s $GITHUB_WORKSPACE/settings.xml -DskipTests
     - name: Archive jars
       uses: actions/upload-artifact@v3
       with:
