--- a/pom.xml
+++ b/pom.xml
@@ -310,6 +310,12 @@
                         <goals>
                             <goal>sign</goal>
                         </goals>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--yes</arg>
+                                <arg>--always-trust</arg>
+                            </gpgArguments>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
