--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,11 +33,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-#        server-id: ossrh
-#        server-username: OSSRH_USERNAME
-#        server-password: OSSRH_TOKEN
-#        gpg-private-key: ${{ secrets.SIGNING_KEY }}
-#        gpg-passphrase: GPG_PASSPHRASE
+        server-id: ossrh
+        server-username: OSSRH_USERNAME
+        server-password: OSSRH_TOKEN
+        gpg-private-key: ${{ secrets.SIGNING_KEY }}
+        gpg-passphrase: GPG_PASSPHRASE
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run checks
