--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - name: Configure GPG Key
       run: |
-        echo -n "$GPG_SIGNING_KEY" | gpg --import --batch
+        echo "$GPG_SIGNING_KEY" | gpg --import --batch
       env:
         GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
     - uses: actions/checkout@v3
