--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
     - name: Configure GPG Key
       run: |
-        echo "$GPG_SIGNING_KEY" | wc -l
+        echo  ${{ secrets.SIGNING_KEY_ID }}
       env:
-        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY_ID }}
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -85,5 +85,5 @@ jobs:
         sonatype.password: ${{ secrets.OSSRH_TOKEN }}
         sonatype.gpg.passphrase: ${{ secrets.SIGNING_PASSWORD }}
         sonatype.gpg.signing-key-id: ${{ secrets.SIGNING_KEY_ID }}
-        sonatype.gpg.signing-key.: ${{ secrets.SIGNING_KEY }}
+        sonatype.gpg.signing-key: ${{ secrets.SIGNING_KEY }}
 
