--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
     - name: Configure GPG Key
       run: |
-        echo $GPG_SIGNING_KEY
+        echo "$GPG_SIGNING_KEY" | wc -c
       env:
-        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY_ID }}
+        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
