--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - name: Configure GPG Key
       run: |
-        echo "$GPG_SIGNING_KEY" | wc -c
+        echo "$GPG_SIGNING_KEY" | gpg --import --batch
       env:
         GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
     - uses: actions/checkout@v3
@@ -85,5 +85,5 @@ jobs:
         sonatype.password: ${{ secrets.OSSRH_TOKEN }}
         sonatype.gpg.passphrase: ${{ secrets.SIGNING_PASSWORD }}
         sonatype.gpg.signing-key-id: ${{ secrets.SIGNING_KEY_ID }}
-        sonatype.gpg.signing-key: ${{ secrets.SIGNING_KEY }}
+        sonatype.gpg.signing-key.: ${{ secrets.SIGNING_KEY }}
 
