--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,8 @@ jobs:
       run: |
         echo "$GPG_SIGNING_KEY" | gpg --import --batch
       env:
-        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+        GPG_SIGNING_KEY: |
+          ${{ secrets.SIGNING_KEY }}
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
