--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,10 +22,9 @@ jobs:
     steps:
     - name: Configure GPG Key
       run: |
-        echo $GPG_SIGNING_KEY | gpg --import --batch
+        echo $GPG_SIGNING_KEY | base64 --decode | gpg --import --batch
       env:
-        GPG_SIGNING_KEY: |
-          ${{ secrets.SIGNING_KEY }}
+        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
