--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,10 +36,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        server-id: ossrh
-        server-username: OSSRH_USERNAME
-        server-password: OSSRH_TOKEN
-        gpg-passphrase: GPG_PASSPHRASE
+        overwrite-settings: false
     - name: Run checks
       env:
         sonatype.username: ${{ secrets.OSSRH_USERNAME }}
