--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,6 +42,7 @@ jobs:
         sonatype.username: ${{ secrets.OSSRH_USERNAME }}
         sonatype.password: ${{ secrets.OSSRH_TOKEN }}
         sonatype.gpg.passphrase: ${{ secrets.SIGNING_PASSWORD }}
+        GPG_TTY: $(tty)
       run: mvn verify -DskipTests -s $GITHUB_WORKSPACE/settings.xml
     - name: Build with Maven
       run: mvn -B package --file pom.xml
