--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
       env:
         sonatype.username: ${{ secrets.OSSRH_USERNAME }}
         sonatype.password: ${{ secrets.OSSRH_TOKEN }}
-        sonatype.gpg.passphrase: ${{ secrets.SIGNING_PASSWORD }}
+        GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
       run: mvn verify -DskipTests -s $GITHUB_WORKSPACE/settings.xml
     - name: Build with Maven
       run: mvn -B package --file pom.xml
