--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,11 +71,9 @@ jobs:
     environment: Deployment_manual
     steps:
     - name: Deploy to SonaType
-      run: mvn deploy --file pom.xml
+      run: mvn deploy --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
       env:
-        sonatype.username: ${{ secrets.OSSRH_USERNAME }}
-        sonatype.password: ${{ secrets.OSSRH_TOKEN }}
-        sonatype.gpg.passphrase: ${{ secrets.SIGNING_PASSWORD }}
-        sonatype.gpg.signing-key-id: ${{ secrets.SIGNING_KEY_ID }}
-        sonatype.gpg.signing-key.: ${{ secrets.SIGNING_KEY }}
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+        GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
 
