--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,14 +37,14 @@ jobs:
         distribution: 'temurin'
         cache: maven
         overwrite-settings: false
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml -DskipTests
     - name: Run checks
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
         GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
       run: mvn verify -DskipTests -s $GITHUB_WORKSPACE/settings.xml
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
     - name: Archive jars
       uses: actions/upload-artifact@v3
       with:
@@ -64,11 +64,17 @@ jobs:
       with:
         name: jacoco-coverage-report
         path: target/site/jacoco/
+    - name: Deploy to SonaType
+      run: mvn deploy --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
+      env:
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+        GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
 
   deploy:
 #    if: github.ref == 'refs/heads/main' COMMENTED OUT FOR TESTING ONLY
     runs-on: ubuntu-latest
-#    environment: Deployment_manual
+    environment: Deployment_manual
     steps:
     - name: Deploy to SonaType
       run: mvn deploy --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
