--- a/pom.xml
+++ b/pom.xml
@@ -319,18 +319,18 @@
             </plugin>
 
             <!-- Also generates checksums -->
-            <plugin>
-                <groupId>org.sonatype.central</groupId>
-                <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>0.4.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <publishingServerId>central</publishingServerId>
-                    <tokenAuth>true</tokenAuth>
-                    <!--                            <autoPublish>true</autoPublish>-->
-                    <!--                                                <waitUntil>published</waitUntil>-->
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.sonatype.central</groupId>-->
+<!--                <artifactId>central-publishing-maven-plugin</artifactId>-->
+<!--                <version>0.4.0</version>-->
+<!--                <extensions>true</extensions>-->
+<!--                <configuration>-->
+<!--                    <publishingServerId>ossrh</publishingServerId>-->
+<!--                    <tokenAuth>true</tokenAuth>-->
+<!--                    &lt;!&ndash;                            <autoPublish>true</autoPublish>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                                                <waitUntil>published</waitUntil>&ndash;&gt;-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
