--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,7 +61,7 @@ jobs:
         name: jacoco-coverage-report
         path: target/site/jacoco/
     - name: Deploy to SonaType
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml --file pom.xml -DskipTests
+      run: mvn nexus-staging:release -s $GITHUB_WORKSPACE/settings.xml --file pom.xml -DskipTests
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
