nexus-staging-maven-plugin

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,7 +64,7 @@ jobs:
       run: mvn nexus-staging:release -s $GITHUB_WORKSPACE/settings.xml --file pom.xml -DskipTests
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
         GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
 
   deploy:
