--- a/pom.xml
+++ b/pom.xml
@@ -314,6 +314,14 @@
                         <goals>
                             <goal>sign</goal>
                         </goals>
+                        <configuration>
+<!--                            <keyname>${gpg.keyname}</keyname>-->
+<!--                            <passphraseServerId>${gpg.keyname}</passphraseServerId>-->
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
