--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,8 @@
                             <gpgArguments>
                                 <arg>--pinentry-mode</arg>
                                 <arg>loopback</arg>
+                                <arg>--batch</arg>
+                                <arg>--keyserver</arg>
                             </gpgArguments>
                         </configuration>
                     </execution>
