--- a/pom.xml
+++ b/pom.xml
@@ -315,13 +315,7 @@
                             <goal>sign</goal>
                         </goals>
                         <configuration>
-<!--                            <keyname>${gpg.keyname}</keyname>-->
-<!--                            <passphraseServerId>${gpg.keyname}</passphraseServerId>-->
-                            <gpgArguments>
-                                <arg>--pinentry-mode</arg>
-                                <arg>loopback</arg>
-                                <arg>--keyserver</arg>
-                            </gpgArguments>
+                            <passphraseServerId>gpg.passphrase</passphraseServerId>
                         </configuration>
                     </execution>
                 </executions>
