--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,11 @@
                             <goal>sign</goal>
                         </goals>
                         <configuration>
-                            <passphraseServerId>gpg.passphrase</passphraseServerId>
+<!--                            <passphraseServerId>gpg.passphrase</passphraseServerId>-->
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
                         </configuration>
                     </execution>
                 </executions>
