--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,6 @@ on:
 env:
   MAVEN_USERNAME: ${{ secrets.TOKEN_USERNAME }}
   MAVEN_PASSWORD: ${{ secrets.TOKEN_PASSWORD }}
-  GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
 
 jobs:
   build:
@@ -26,6 +25,8 @@ jobs:
     - name: Configure GPG Key
       run: |
         echo -n "$GPG_SIGNING_KEY" | base64 --decode | gpg --import --batch
+      env:
+        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
