--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,19 +15,19 @@ on:
     branches: [ "main" ]
 
 env:
-  MAVEN_USERNAME: ${{ secrets.TOKEN_USERNAME }}
-  MAVEN_PASSWORD: ${{ secrets.TOKEN_PASSWORD }}
-  GPG_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
+  NEXUS_USERNAME: ${{ secrets.TOKEN_USERNAME }}
+  NEXUS_PASSWORD: ${{ secrets.TOKEN_PASSWORD }}
+  SIGNING_KEY_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Configure GPG Key
+    - name: Configure Signing Key
       run: |
-        echo -n "$GPG_SIGNING_KEY" | base64 --decode | gpg --import --batch
+        echo -n "$SIGNING_KEY" | base64 --decode | gpg --import --batch
       env:
-        GPG_SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
+        SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -35,8 +35,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
+        server-username: NEXUS_USERNAME
+        server-password: NEXUS_PASSWORD
     - name: Build with Maven
       run: mvn -B package
     - name: Run checks
