--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,7 @@
                             <goal>sign</goal>
                         </goals>
                         <configuration>
-                            <passphraseEnvName>GPG_PASSPHRASE</passphraseEnvName>
+                            <passphraseEnvName>SIGNING_KEY_PASSPHRASE</passphraseEnvName>
                         </configuration>
                     </execution>
                 </executions>
