--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,5 +66,14 @@ jobs:
     runs-on: ubuntu-latest
     environment: Deployment_manual
     steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+        server-username: NEXUS_USERNAME
+        server-password: NEXUS_PASSWORD
     - name: Deploy to SonaType
       run: mvn deploy
