--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,6 +66,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: Deployment_manual
     steps:
+    - name: Configure Signing Key
+      run: |
+        echo -n "$SIGNING_KEY" | base64 --decode | gpg --import --batch
+      env:
+        SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
