--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -77,6 +77,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        server-id: ossrh
         cache: maven
         server-username: NEXUS_USERNAME
         server-password: NEXUS_PASSWORD
