Add needs for deploy

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,6 +64,8 @@ jobs:
   deploy:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    needs:
+      - build
     environment: Deployment_manual
     steps:
     - name: Configure Signing Key
