--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package
     - name: Run checks
-      run: mvn verify
+      run: |
+        mvn verify
+        ls -alR target/
     - name: Archive jars
       uses: actions/upload-artifact@v4
       with:
