--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,26 +24,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}   # checkout the correct branch name
-          fetch-depth: 0                # fetch the whole repo history
+          fetch-depth: 0
 
       - name: Git Version
         id: version
         uses: codacy/git-version@2.7.1
 
-      - name: Use the version
+      - name: Show version
+        env:
+          version: ${{ steps.version.outputs.version }}
         run: |
-          echo ${{ steps.version.outputs.version }}
-      - name: Use the previous version
-        run: |
-          echo ${{ steps.version.outputs.previous-version }}
+          echo "Version:"
+          echo "${{ steps.version.outputs.version }}"
+          echo "### Version: $version" >> $GITHUB_STEP_SUMMARY
 
   build:
     runs-on: ubuntu-latest
     needs:
       - calc_version
+    env:
+      version: ${{ needs.calc_version.outputs.version }}
     steps:
     - name: Configure Signing Key
       run: |
@@ -88,6 +90,9 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+      - calc_version
+    env:
+      version: ${{ needs.calc_version.outputs.version }}
     environment: Deployment_manual
     steps:
     - name: Configure Signing Key
