--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,17 +20,44 @@ env:
   SIGNING_KEY_PASSPHRASE: ${{ secrets.SIGNING_PASSWORD }}
 
 jobs:
+  calc_version:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+
+      - name: Git Version
+        id: version
+        uses: codacy/git-version@2.8.0
+
+      - name: Show version
+        env:
+          version: ${{ steps.version.outputs.version }}
+        run: |
+          echo "Version:"
+          echo "${{ steps.version.outputs.version }}"
+          echo "### Version: $version" >> $GITHUB_STEP_SUMMARY
+
   build:
     runs-on: ubuntu-latest
+    needs:
+      - calc_version
+    env:
+      version: ${{ needs.calc_version.outputs.version }}
     steps:
     - name: Configure Signing Key
       run: |
         echo -n "$SIGNING_KEY" | base64 --decode | gpg --import --batch
       env:
         SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -42,21 +69,16 @@ jobs:
     - name: Run checks
       run: mvn verify
     - name: Archive jars
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         path: target/*.jar*
     - name: Archive pmd
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: pmd-report
         path: target/site/pmd.html
-    - name: Archive dependency check
-      uses: actions/upload-artifact@v3
-      with:
-        name: dependency-check-report
-        path: target/dependency-check-report.html
     - name: Archive code coverage report
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: jacoco-coverage-report
         path: target/site/jacoco/
@@ -64,6 +86,11 @@ jobs:
   deploy:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    needs:
+      - build
+      - calc_version
+    env:
+      version: ${{ needs.calc_version.outputs.version }}
     environment: Deployment_manual
     steps:
     - name: Configure Signing Key
@@ -71,9 +98,9 @@ jobs:
         echo -n "$SIGNING_KEY" | base64 --decode | gpg --import --batch
       env:
         SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -83,3 +110,7 @@ jobs:
         server-password: NEXUS_PASSWORD
     - name: Deploy to SonaType
       run: mvn deploy
+    - name: Tag repository
+      run: |
+        git tag $version
+        git push origin $version
