--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gravity9</groupId>
     <artifactId>mongo-change-stream-enhancer</artifactId>
-    <version>1.0.0-beta</version>
+    <version>${env.version}</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
