Provide valid name for release-branch: main

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Git Version
         id: version
         uses: codacy/git-version@2.8.0
+        with:
+          release-branch: main
 
       - name: Show version
         env:
