--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -111,7 +111,7 @@ jobs:
     - name: Deploy to SonaType
       run: mvn deploy
 
-  release:
+  post_deploy_tagging:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs:
