--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
+    branches:
+      - main
 
 env:
   NEXUS_USERNAME: ${{ secrets.TOKEN_USERNAME }}
