Add env.version for deploy job

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -94,6 +94,8 @@ jobs:
     needs:
       - build
       - calc_version
+    env:
+      version: ${{ needs.calc_version.outputs.version }}
     environment: Deployment_manual
     steps:
     - name: Configure Signing Key
